<resources>
    <string name="gcm_defaultSenderId">953585151264</string>
    <string name="deep_linking_schema">dineout</string>
    <string name="ga_tracking_id_testing">UA-73617076-1</string>
    <string name="ga_tracking_id_production">UA-32580312-2</string>
    <string name="apsalar_api_key">timesinternet</string>
    <string name="apsalar_secret_key">NmecPMtU</string>
    <string name="app_name">Dineout</string>
    <string name="call_failed_response">Call failed. Please try again later.</string>
    <string name="button_ok">OK</string>
    <string name="button_dismiss">DISMISS</string>
    <string name="facebook_app_id">568956213159751</string>
    <string name="no_network_connection">No Internet Connectivity</string>
    <string name="server_down">Server Error. Kindly try again later</string>
    <string name="call_us">CALL US TO BOOK YOUR TABLE</string>
    <string name="call_us_no">+91 9212340202</string>
    <string name="checking">Checking… Please wait</string>
    <string name="uber_dialog_title">Ride there with Uber</string>
    <string name="search_locality_hint">Search your area/locality here</string>
    <string name="text_all_localities">All Localities</string>
    <string name="table_confirmation_hint">The Mobile number and Email address is mandatory as it will help us to send you a booking confirmation via SMS and Email</string>
    <string name="sign_name">Your Name</string>
    <string name="table_mobile_number">Your Phone Number</string>
    <string name="table_email">Your Email Address</string>
    <string name="table_password">Your Password</string>
    <string name="table_confirm_text">Confirm my table</string>
    <string name="go_now_text">Walk in and get offer</string>
    <string name="view_all_reviews">view all reviews</string>
    <string name="rate">Rate &amp; Review</string>
    <string name="menu">MENU</string>
    <string name="action_share">Share</string>
    <string name="rat_rv_title">RATING &amp; REVIEW</string>
    <string name="restaurant_detail_offer_count">%1$d OFFER(S) AVAILABLE</string>
    <string name="restaurant_carlsberg_details">CARLSBERG CLUB GLASSES OFFER</string>
    <string name="call_now">Call now</string>
    <string name="view_all">VIEW ALL</string>
    <string name="text_doplus_member_offer_title">DINEOUT PLUS OFFER - EXCLUSIVELY FOR YOU</string>
    <string name="text_doplus_non_member_offer_title">OFFER FOR DINEOUT PLUS MEMBER</string>
    <string name="text_tap_view_details">TAP TO VIEW MORE DETAILS</string>
    <string name="text_result">Result</string>
    <string name="text_results">Results</string>
    <string name="restaurant_result_offer_count_single">%1$s offer available</string>
    <string name="restaurant_result_offer_count_multi">%1$s offers available</string>
    <string name="no_result_found_1">Oops! No Results Found</string>
    <string name="no_result_found_2">Try changing some filters or search again</string>
    <string name="result_search_hint">Search Restaurants, Cuisine, etc</string>
    <string name="booking_complete_failure_msg_1">Something wrong has happened</string>
    <string name="tb_one_moment">One moment please…</string>
    <string name="tb_detecting_location">We are detecting your location</string>
    <string name="text_term_condition_privacy_policy">By signing up, you accept our\nTerms &amp; Conditions and Privacy Policy</string>
    <string name="show_pass">Show Password</string>
    <string name="text_forgot_password">Forgot your Password?</string>
    <string name="forgot_pass_head">Enter your registered Email address and we will send you the password.</string>
    <string name="login_dialog_login_with_facebook">Login with Facebook</string>
    <string name="login_dialog_login_with_google">Login with Google</string>
    <string name="login_dialog_login_with_email">Login with Email</string>
    <string name="login_dialog_login_new_user">New User ?</string>
    <string name="login_dialog_login_guest">Continue as a Guest</string>
    <string name="login_dialog_title_default">Yay!! We have saved your Table&#8230;</string>
    <string name="login_dialog_message_default">To confirm your table, please login now</string>
    <string name="login_dialog_title_home">Please login to proceed further</string>
    <string name="login_dialog_title_my_bookings">To view your Upcoming &amp; Past Bookings, please login now</string>
    <string name="login_dialog_title_review">We would love to know your experience&#8230;</string>
    <string name="login_dialog_message_review">To write your review, please login now</string>
    <string name="login_dialog_title_my_account">To view your Savings and save your details, please login now</string>
    <string name="login_dialog_title_my_favs">To view your Favourite Restaurants, please login now</string>
    <string name="login_dialog_title_do_fav">To favourite a Restaurant, please login now</string>
    <string name="login_dialog_title_wallet">To view Your Earnings on Dineout, please login now</string>
    <string name="login_dialog_title_referral">In order to Refer Friends &amp; Earn Rewards, please login now</string>
    <string name="login_dialog_title_my_bills">To view your Bills, please login now</string>
    <string name="login_dialog_title_my_transactions">To view your past Transactions, please login now</string>
    <string name="login_dialog_title_my_do_plus_card">To view your DO Plus Membership Card, please login now</string>
    <string name="login_dialog_title_my_do_plus_membership">To become DO Plus Member, please login now</string>
    <string name="search_activity_title">Search</string>
    <string name="title_activity_login">Login</string>
    <string name="text_sign_in">Sign in</string>
    <string name="suggested_search">SUGGESTED SEARCHES IN %1$s</string>
    <string name="text_filter">Filter</string>
    <string name="account_joining_date">You joined dineout on %1$s</string>
    <string name="all_timings">All Timings</string>
    <string name="no_upcoming_bookings">You don\'t have any upcoming bookings</string>
    <string name="no_history_bookings">You don\'t have any past bookings</string>
    <string name="reserve_again">Reserve Again</string>
    <string name="reviewed">REVIEWED</string>
    <string name="write_review">Write Review</string>
    <string name="diner_name">Hi %1$s,</string>
    <string name="booking_id">Your Booking ID is </string>
    <string name="booking_cancel_msg">Are you sure you want to cancel this booking?</string>
    <string name="booking_edit_msg">Editing will make your current booking invalid. Are you sure you want to proceed?</string>
    <string name="text_dineout_plus_unique_code">Dineout Plus Unique code</string>
    <string name="share_plan_paragraph">Outings are more fun with friends. Inform them your plan!</string>
    <string name="share">PLAN</string>
    <string name="share_fb" formatted="false">I have just reserved a table with dineout at %1$s for FREE. It was super easy and saved me good time, effort and MONEY. Check it out at %2$s</string>
    <string name="share_twitter" formatted="false">Got a table via @dineout_india at %1$s. Saved time &amp; MONEY</string>
    <string name="share_twitter_rest_url" formatted="false">Got a table via @dineout_india at %1$s. Saved time &amp; MONEY. Follow %2$s</string>
    <string name="share_whatsapp" formatted="false">Hi, I have just reserved a table via dineout at %1$s on %2$s at %3$s. Check it out at %4$s. See you there!! (Booking ID: %5$s)</string>
    <string name="share_message" formatted="false">Hi, I have just reserved a table via dineout at %1$s on %2%s at %3$s. Check it out at %4$s. See you there!! (Booking ID: %5$s)</string>
    <string name="share_email" formatted="false">Hi,\n\n%s has invited you to %1$s on %2$s at %3%s. We hope you have a good time.\n\nCheck out the Restaurant at %4$s\n\nJust like %5$s, be smart and reserve a table for FREE on dineout.co.in at the best restaurants in your city and save up to 30%%.\n\nCheers!\nTeam dineout.</string>
    <string name="share_default" formatted="false">I have just reserved a table with dineout for FREE. It was super easy and saved me good time, effort and MONEY up to 30%.</string>
    <string name="share_resto_detail" formatted="false">Checkout this restaurant on dineout. %1$s, %2$s, %3$s.</string>
    <string name="share_resturant_subject" formatted="false">Checkout %1$s on dineout</string>
    <string name="gallery_counter">Showing %1$s out of %2$s</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="review_hint">Write your review here…</string>
    <string name="rate_review_head_title">Tell us about your experience (optional).</string>
    <string name="review_rating_error">Please provide a rating</string>
    <string name="wiz_account_id">888-58R-5R4Z</string>
    <string name="wiz_account_token">2b5-bbb</string>
    <string name="tnc">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="accessibility_setting">Booking Assistant</string>
    <string name="about">About dineout</string>
    <string name="dineout_site">www.dineout.co.in</string>
    <string name="about_str">About</string>
    <string name="promoCopyMessage">Promotion Code Copied</string>
    <string name="referral_invite_fb_title">Copy text and paste to Facebook dialogue</string>
    <string name="text_copied">Text copied to clipboard, To share it, please paste it to Facebook dialogue</string>
    <string name="konotor_app_id">b7e54b04-89a3-4501-82eb-e8cfdbb49918</string>
    <string name="konotor_app_key">ff7163c2-70de-4bbd-b685-8ed0f8094fe8</string>
    <string name="konotor_title">10:30 am – 11:00 pm</string>
    <string name="konotor_welcome_msg">Welcome to dineout! We would love to help you reserve a table or plan any parties/events that you may want to organize. You can speak to us as well at +91-9212340202.</string>
    <string name="title_smart_pay">SmartPay</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_verify">Verify</string>
    <string name="label_btn_submit">Submit</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_name">Name</string>
    <string name="hint_email">Email address</string>
    <string name="label_enter_enquiry_detail">Please fill in the Enquiry form.</string>
    <string name="text_smartpay_content_1">Reserve &amp; pay your restaurant bill via app &amp; get additional cashback.</string>
    <string name="text_smartpay_content_2">Creditcard/Debitcard/netbanking/PayTM/Mobiwick available.</string>
    <string name="text_voucher_code">Voucher code</string>
    <string name="text_pin">PIN</string>
    <string name="text_gift_voucher_link_text">Have questions? Read the FAQs</string>
    <string name="wallet_info_title">About Your earnings</string>
    <string name="wallet_info_popup_one">Total Earnings – These are your total earnings via dineout till date</string>
    <string name="wallet_info_popup_two">Redeemable Cash – This is your current balance in the dineout earning which can be redeemed at any of our partners</string>
    <string name="wallet_info_popup_three">Waiting Amount – This is the welcomeMsg you have earned via referrals. This will be redeemable once you and your friends complete your first successful check-in after reservation</string>
    <string name="password_terms">Password must contain at least 6 characters including an Uppercase and a Number.</string>
    <string name="reset_code_terms">Enter the reset code sent to your Mobile / Email</string>
    <string name="reset_code">Enter Reset Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">Enter New Password</string>
</resources>