<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_smartpay_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="18dp"
        android:text="@string/title_smart_pay"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout_smartpay_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_smartpay_title"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_smartpay_content_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_smartpay_content_1"
            android:textColor="@color/grey_4D"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_smartpay_content_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/text_smartpay_content_2"
            android:textColor="@color/grey_4D"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_smartpay_ok"
        style="@style/ButtonStyle.RectanglePrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_smartpay_content"
        android:gravity="center_horizontal"
        android:text="@string/button_ok" />

</RelativeLayout>