<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/new_password_edtxt"
            style="@style/EditTextAccountStyle"
            android:paddingBottom="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:background="@drawable/edittxt_border">
            <requestFocus/>
        </EditText>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey_75"
            android:text="@string/password_terms"
            android:layout_gravity="left"
            android:textSize="12sp"/>


        <EditText
            android:id="@+id/confirm_password_edtxt"
            style="@style/EditTextAccountStyle"
            android:layout_marginTop="30dp"
            android:paddingBottom="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:background="@drawable/edittxt_border"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey_75"
            android:text="@string/password_terms"
            android:layout_gravity="left"
            android:textSize="12sp"/>


        <EditText
            android:id="@+id/reset_code_edtxt"
            style="@style/EditTextAccountStyle"
            android:layout_marginTop="30dp"
            android:paddingBottom="10dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reset_code"
            android:background="@drawable/edittxt_border"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey_75"
            android:text="@string/reset_code_terms"
            android:layout_gravity="left"
            android:textSize="12sp"/>



        <Button
            android:id="@+id/send_code_btn"
            android:layout_marginTop="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="Reset Password"
            android:background="@drawable/round_rectangle_primary_button_selector"/>


    </LinearLayout>

    </LinearLayout>

    <include
        layout="@layout/dineout_loader_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <include layout="@layout/network_error_layout"></include>

    </RelativeLayout>